# Basic_Py_from_CPP

./: .gitignore  CMakeLists.txt  foo.py  main.cpp
